# The-Geometry-Factory

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: API.md
src/: GeometryFactory.jl  glad.c  main.c
src/glad/: glad.h
